--- a/packages/style/themes/cqdg/antd/antd.less
+++ b/packages/style/themes/cqdg/antd/antd.less
@@ -2,7 +2,7 @@
 @import '_colors.less';
 
 @text-color: @gray-8;
-@border-color-base:@gray-5;
+@border-color-base:@gray-4;
 // Buttons
 .ant-btn {
     padding: .5rem .8rem;
@@ -240,6 +240,7 @@
     }
 }
 .ant-checkbox {
+    top: 0;
     &:hover {
         .ant-checkbox-inner {
             border-color: @blue-7;
